<resources>
    <string name="app_name">Calculator</string>
    <string name="standard">Standard</string>
    <string name="current_number">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="del">DEL</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="enter_yout_number">Enter yout number</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="multiple">x</string>
    <string name="_3">3</string>
    <string name="sign">+/-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
</resources>